--- a/src/app/leinster/leinster.page.html
+++ b/src/app/leinster/leinster.page.html
@@ -15,4 +15,5 @@
   </ion-header>
 
   <ion-img [routerLink]="['/leinster-counties']" src="https://upload.wikimedia.org/wikipedia/commons/8/8d/Flag_of_Leinster.svg" width="400" height="200"></ion-img>
+  <ion-button (click)='openCounties()'>Go To Counties</ion-button>
 </ion-content>
